--- a/snapshotHTML/index.html
+++ b/snapshotHTML/index.html
@@ -4,10 +4,7 @@
     <title>WebRTC: Still photo capture demo</title>
     <meta charset='utf-8'>
     <link rel="stylesheet" href="main.css" type="text/css" media="all">
-    <script type='text/javascript'>
-        var first = "f1";
-        var second = "s2";
-    </script>
+
     <script type='text/javascript' src="capture.js">
     //I think it only runs the src script then skips to the next instruction
     //code doesnt run here
@@ -15,34 +12,6 @@
 </head>
 <body>
 
-
-    <script type='text/javascript'>
-        var third = "t3";
-        //local storage gets updated every second
-
-        console.log(first);
-        third = localStorage.getItem('facepicphoto');
-        //the cookie cannot store the the full string of the photo data
-        //due to memory limitations
-        document.cookie = "data1 = " + first;
-    </script>
-
-    <script type='text/javascript'>
-    //attempting to store data directly to server using xmlhttprequest
-    var xhr = new XMLHttpRequest();
-    var formData = new FormData();
-    formData.append("image", third);
-    formData.append("text", first);
-  //  xhr.open('POST', 'http://127.0.0.1:3000', true);
-  //  xhr.send(first);
-    //try to see if it will work on router
-  //  xhr.open('POST', 'http://127.0.0.1:3000/router/test', true);
-  //  xhr.send(formData);
-    //sending these variables didnt work
-    //xhr.send(first);
-    //xhr.send(third);
-    //console.log('FormData ', formData);
-    </script>
     <div class="contentarea">
         <h1>
             MDN - WebRTC: Still photo capture demo
@@ -52,7 +21,7 @@
         </p>
         <div class="camera">
             <video id="video">Video stream not available.</video>
-            <button id="startbutton">Take photo</button>
+
         </div>
         <canvas id="canvas"></canvas>
         <div class="output">
@@ -64,11 +33,9 @@
     </div>
     <script type='text/javascript'>
         //cookie testing
+        //cookies have small memory limit , can't fit the whole string
         first = localStorage.getItem('facepicdata');
-        second = localStorage.getItem('facepicphoto');
-        //console.log(first);
         document.cookie = "end = " + first;
-        document.cookie = "seCend = " + second;
     </script>
 </body>
 </html>
