--- a/lib/static/play.html
+++ b/lib/static/play.html
@@ -12,6 +12,11 @@
             crossorigin="anonymous"
         />
         <title>Explore</title>
+        <style>
+            html, body, #root {
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
         <div id="root"></div>
